@@ -32,10 +32,10 @@ import java.util.stream.Stream;
 
 import static com.github.t1.wunderbar.junit.assertions.WunderBarBDDAssertions.then;
 import static com.github.t1.wunderbar.junit.provider.WunderBarTestFinder.findTestsIn;
+import static jakarta.ws.rs.core.Response.Status.CREATED;
 import static java.lang.Integer.parseInt;
 import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toList;
-import static jakarta.ws.rs.core.Response.Status.CREATED;
 
 @WunderBarApiProvider(baseUri = "{endpoint()}")
 class SetupTeardownAT {
@@ -52,9 +52,9 @@ class SetupTeardownAT {
     @BeforeAll static void beforeAll() {
         called.clear();
         expectations.add(
-            HttpRequest.builder().uri("/4").build(),
-            3,
-            HttpResponse.builder().status(406).with("status", "UP").build());
+                HttpRequest.builder().uri("/4").build(),
+                3,
+                HttpResponse.builder().status(406).with("status", "UP").build());
     }
 
 
@@ -87,14 +87,14 @@ class SetupTeardownAT {
 
     @Order(5)
     @BeforeDynamicTest List<HttpRequest> beforeDynamicTestWithRequests(List<HttpRequest> requests, WunderBarExecutions executions) {
-        requests = requests.stream().map(this::incUri).collect(toList());
+        requests = requests.stream().map(this::incUri).toList();
         called(BeforeDynamicTest.class, "requests", requestUris(requests), executions.getDisplayName());
         return requests;
     }
 
     @Order(6)
     @BeforeDynamicTest List<HttpResponse> beforeDynamicTestWithResponses(List<HttpResponse> responses, WunderBarExecutions executions) {
-        responses = responses.stream().map(this::incStatus).collect(toList());
+        responses = responses.stream().map(this::incStatus).toList();
         called(BeforeDynamicTest.class, "responses", responseStatus(responses), executions.getDisplayName());
         return responses;
     }
@@ -148,14 +148,16 @@ class SetupTeardownAT {
     }
 
     @Order(3)
-    @AfterInteraction HttpResponse afterInteraction(HttpRequest request, HttpResponse response, WunderBarExecution execution) {
+    @AfterInteraction
+    HttpResponse afterInteraction(HttpRequest request, HttpResponse response, WunderBarExecution execution) {
         response = incStatus(response);
         called(AfterInteraction.class, "interaction", request.getUri(), response.getStatusCode(), execution);
         return response;
     }
 
     @Order(4)
-    @AfterInteraction HttpResponse afterInteraction(HttpResponse expected, @Actual HttpResponse actual, WunderBarExecution execution) {
+    @AfterInteraction
+    HttpResponse afterInteraction(HttpResponse expected, @Actual HttpResponse actual, WunderBarExecution execution) {
         called(AfterInteraction.class, "expected", expected.getStatusCode(), "actual", actual.getStatusCode(), execution);
         return expected.withStatus(actual.getStatus());
     }
@@ -163,19 +165,19 @@ class SetupTeardownAT {
 
     @Order(1)
     @OnInteractionError void onInteractionError(
-        HttpInteraction interaction,
-        HttpRequest request,
-        HttpResponse expected,
-        @Actual HttpResponse actual,
-        BDDSoftAssertions softly,
-        WunderBarExecution execution) {
+            HttpInteraction interaction,
+            HttpRequest request,
+            HttpResponse expected,
+            @Actual HttpResponse actual,
+            BDDSoftAssertions softly,
+            WunderBarExecution execution) {
         called(OnInteractionError.class,
-            "interaction", interaction.getRequest().getUri(), interaction.getResponse().getStatusCode(),
-            "request", request.getUri(),
-            "expected", expected.getStatusCode(),
-            "actual", actual.getStatusCode(),
-            "errors", softly.assertionErrorsCollected(),
-            execution);
+                "interaction", interaction.getRequest().getUri(), interaction.getResponse().getStatusCode(),
+                "request", request.getUri(),
+                "expected", expected.getStatusCode(),
+                "actual", actual.getStatusCode(),
+                "errors", softly.assertionErrorsCollected(),
+                execution);
         softly.assertAll();
     }
 
@@ -196,7 +198,8 @@ class SetupTeardownAT {
     }
 
     @Order(4)
-    @AfterDynamicTest void afterDynamicTestWithActuals(@Actual List<HttpResponse> actuals, WunderBarExecutions executions) {
+    @AfterDynamicTest
+    void afterDynamicTestWithActuals(@Actual List<HttpResponse> actuals, WunderBarExecutions executions) {
         called(AfterDynamicTest.class, "actuals", responseStatus(actuals), executions.getDisplayName());
     }
 
@@ -220,19 +223,18 @@ class SetupTeardownAT {
 
     private List<String> interactionInfos(List<HttpInteraction> interactions) {
         return interactions.stream().map(httpInteraction ->
-                ""
-                + httpInteraction.getRequest().getUri()
-                + ":"
-                + httpInteraction.getResponse().getStatusCode())
-            .collect(toList());
+                        httpInteraction.getRequest().getUri()
+                        + ":"
+                        + httpInteraction.getResponse().getStatusCode())
+                .toList();
     }
 
     private List<URI> requestUris(List<HttpRequest> requests) {
-        return requests.stream().map(HttpRequest::getUri).collect(toList());
+        return requests.stream().map(HttpRequest::getUri).toList();
     }
 
     private List<Integer> responseStatus(List<HttpResponse> responses) {
-        return responses.stream().map(HttpResponse::getStatusCode).collect(toList());
+        return responses.stream().map(HttpResponse::getStatusCode).toList();
     }
 
 
@@ -249,8 +251,8 @@ class SetupTeardownAT {
 
     private HttpInteraction incInteraction(HttpInteraction interaction) {
         return interaction
-            .withRequest(incUri(interaction.getRequest()))
-            .withResponse(incStatus(interaction.getResponse()));
+                .withRequest(incUri(interaction.getRequest()))
+                .withResponse(incStatus(interaction.getResponse()));
     }
 
     private HttpRequest incUri(HttpRequest request) {return request.withUri("/" + (uriInt(request.uri()) + 1));}
@@ -268,74 +270,74 @@ class SetupTeardownAT {
     @AfterAll static void afterAll() {
         then(MockService.getExpectations()).isEmpty();
         then(called).containsExactly(
-            "BeforeEach",
+                "BeforeEach",
 
-            "---------------------------------------- shouldGetHealth [with 1 tests]",
-            "BeforeDynamicTest",
-            "BeforeDynamicTest interactions:[/1:401]:shouldGetHealth",
-            "BeforeDynamicTest interactions:[/1:401, /99:200]:shouldGetHealth",
-            "BeforeDynamicTest requests:[/2, /100]:shouldGetHealth",
-            "BeforeDynamicTest responses:[402, 201]:shouldGetHealth",
-            // => execute 1 of 1
-            "BeforeInteraction",
-            "BeforeInteraction interaction:/3:403:shouldGetHealth[1/1]",
-            "BeforeInteraction request:/4:shouldGetHealth",
-            "BeforeInteraction response:404:shouldGetHealth",
-            // -- actual request 1/1:
-            "AfterInteraction",
-            "AfterInteraction interaction:/5:405:shouldGetHealth[1/1]",
-            "AfterInteraction interaction:/4:406:shouldGetHealth[1/1]",
-            "AfterInteraction expected:406:actual:406:shouldGetHealth[1/1]",
+                "---------------------------------------- shouldGetHealth [with 1 tests]",
+                "BeforeDynamicTest",
+                "BeforeDynamicTest interactions:[/1:401]:shouldGetHealth",
+                "BeforeDynamicTest interactions:[/1:401, /99:200]:shouldGetHealth",
+                "BeforeDynamicTest requests:[/2, /100]:shouldGetHealth",
+                "BeforeDynamicTest responses:[402, 201]:shouldGetHealth",
+                // => execute 1 of 1
+                "BeforeInteraction",
+                "BeforeInteraction interaction:/3:403:shouldGetHealth[1/1]",
+                "BeforeInteraction request:/4:shouldGetHealth",
+                "BeforeInteraction response:404:shouldGetHealth",
+                // -- actual request 1/1:
+                "AfterInteraction",
+                "AfterInteraction interaction:/5:405:shouldGetHealth[1/1]",
+                "AfterInteraction interaction:/4:406:shouldGetHealth[1/1]",
+                "AfterInteraction expected:406:actual:406:shouldGetHealth[1/1]",
 
-            "OnInteractionError interaction:/4:406:request:/4:expected:406:actual:406:errors:[]:shouldGetHealth[1/1]",
-            // => cleanup shouldGetHealth
-            "AfterDynamicTest interactions:[/2:402]:shouldGetHealth [with 1 tests]",
-            "AfterDynamicTest requests:[/2]:shouldGetHealth",
-            "AfterDynamicTest responses:[402]:shouldGetHealth",
-            "AfterDynamicTest actuals:[406]:shouldGetHealth",
-            "AfterDynamicTest",
-            "---------------------------------------- done shouldGetHealth [with 1 tests]",
-            "",
-            "---------------------------------------- shouldGetHealthTwice [with 2 tests]",
-            "BeforeDynamicTest",
-            "BeforeDynamicTest interactions:[/1:401, /1:401]:shouldGetHealthTwice",
-            "BeforeDynamicTest interactions:[/1:401, /1:401, /99:200]:shouldGetHealthTwice",
-            "BeforeDynamicTest requests:[/2, /2, /100]:shouldGetHealthTwice",
-            "BeforeDynamicTest responses:[402, 402, 201]:shouldGetHealthTwice",
+                "OnInteractionError interaction:/4:406:request:/4:expected:406:actual:406:errors:[]:shouldGetHealth[1/1]",
+                // => cleanup shouldGetHealth
+                "AfterDynamicTest interactions:[/2:402]:shouldGetHealth [with 1 tests]",
+                "AfterDynamicTest requests:[/2]:shouldGetHealth",
+                "AfterDynamicTest responses:[402]:shouldGetHealth",
+                "AfterDynamicTest actuals:[406]:shouldGetHealth",
+                "AfterDynamicTest",
+                "---------------------------------------- done shouldGetHealth [with 1 tests]",
+                "",
+                "---------------------------------------- shouldGetHealthTwice [with 2 tests]",
+                "BeforeDynamicTest",
+                "BeforeDynamicTest interactions:[/1:401, /1:401]:shouldGetHealthTwice",
+                "BeforeDynamicTest interactions:[/1:401, /1:401, /99:200]:shouldGetHealthTwice",
+                "BeforeDynamicTest requests:[/2, /2, /100]:shouldGetHealthTwice",
+                "BeforeDynamicTest responses:[402, 402, 201]:shouldGetHealthTwice",
 
-            // 1/2
-            "BeforeInteraction",
-            "BeforeInteraction interaction:/3:403:shouldGetHealthTwice[1/2]",
-            "BeforeInteraction request:/4:shouldGetHealthTwice",
-            "BeforeInteraction response:404:shouldGetHealthTwice",
+                // 1/2
+                "BeforeInteraction",
+                "BeforeInteraction interaction:/3:403:shouldGetHealthTwice[1/2]",
+                "BeforeInteraction request:/4:shouldGetHealthTwice",
+                "BeforeInteraction response:404:shouldGetHealthTwice",
 
-            "AfterInteraction",
-            "AfterInteraction interaction:/5:405:shouldGetHealthTwice[1/2]",
-            "AfterInteraction interaction:/4:406:shouldGetHealthTwice[1/2]",
-            "AfterInteraction expected:406:actual:406:shouldGetHealthTwice[1/2]",
+                "AfterInteraction",
+                "AfterInteraction interaction:/5:405:shouldGetHealthTwice[1/2]",
+                "AfterInteraction interaction:/4:406:shouldGetHealthTwice[1/2]",
+                "AfterInteraction expected:406:actual:406:shouldGetHealthTwice[1/2]",
 
-            "OnInteractionError interaction:/4:406:request:/4:expected:406:actual:406:errors:[]:shouldGetHealthTwice[1/2]",
+                "OnInteractionError interaction:/4:406:request:/4:expected:406:actual:406:errors:[]:shouldGetHealthTwice[1/2]",
 
-            // 2/2
-            "BeforeInteraction",
-            "BeforeInteraction interaction:/3:403:shouldGetHealthTwice[2/2]",
-            "BeforeInteraction request:/4:shouldGetHealthTwice",
-            "BeforeInteraction response:404:shouldGetHealthTwice",
+                // 2/2
+                "BeforeInteraction",
+                "BeforeInteraction interaction:/3:403:shouldGetHealthTwice[2/2]",
+                "BeforeInteraction request:/4:shouldGetHealthTwice",
+                "BeforeInteraction response:404:shouldGetHealthTwice",
 
-            "AfterInteraction",
-            "AfterInteraction interaction:/5:405:shouldGetHealthTwice[2/2]",
-            "AfterInteraction interaction:/4:406:shouldGetHealthTwice[2/2]",
-            "AfterInteraction expected:406:actual:406:shouldGetHealthTwice[2/2]",
+                "AfterInteraction",
+                "AfterInteraction interaction:/5:405:shouldGetHealthTwice[2/2]",
+                "AfterInteraction interaction:/4:406:shouldGetHealthTwice[2/2]",
+                "AfterInteraction expected:406:actual:406:shouldGetHealthTwice[2/2]",
 
-            "OnInteractionError interaction:/4:406:request:/4:expected:406:actual:406:errors:[]:shouldGetHealthTwice[2/2]",
+                "OnInteractionError interaction:/4:406:request:/4:expected:406:actual:406:errors:[]:shouldGetHealthTwice[2/2]",
 
-            "AfterDynamicTest interactions:[/2:402, /2:402]:shouldGetHealthTwice [with 2 tests]",
-            "AfterDynamicTest requests:[/2, /2]:shouldGetHealthTwice",
-            "AfterDynamicTest responses:[402, 402]:shouldGetHealthTwice",
-            "AfterDynamicTest actuals:[406, 406]:shouldGetHealthTwice",
-            "AfterDynamicTest",
-            "---------------------------------------- done shouldGetHealthTwice [with 2 tests]",
-            "",
-            "AfterEach");
+                "AfterDynamicTest interactions:[/2:402, /2:402]:shouldGetHealthTwice [with 2 tests]",
+                "AfterDynamicTest requests:[/2, /2]:shouldGetHealthTwice",
+                "AfterDynamicTest responses:[402, 402]:shouldGetHealthTwice",
+                "AfterDynamicTest actuals:[406, 406]:shouldGetHealthTwice",
+                "AfterDynamicTest",
+                "---------------------------------------- done shouldGetHealthTwice [with 2 tests]",
+                "",
+                "AfterEach");
     }
 }
